--- a/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
@@ -5,8 +5,8 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
                  template="/view/templ/templ-dlg.xhtml">
 
-    <ui:param name="_bean" value="#{countersExplBean}"/>
-
+    <ui:param name="_bean" value="#{countersExplBean}"/>    
+    
     <ui:define name="centerFormContent">      
 
         <p:dataTable id="itemsTbl" value="#{countersExplBean.counters}" 
@@ -25,14 +25,18 @@
             <p:column width="16">
                 <h:graphicImage value="/resources/icon/counter.png"/>   
             </p:column>
-
-            <p:column headerText="#{bundle.Type}" sortBy="#{item.typeName}">
-                <h:outputLabel value="#{item.typeName}"/>
+            
+            <p:column headerText="#{bundle.Name}" sortBy="#{item.name}">
+                <h:outputLabel value="#{item.name}"/>
             </p:column>
-
+            
             <p:column headerText="#{bundle.Company}" sortBy="#{item.companyName}">
                 <h:outputLabel value="#{item.companyName}"/>
-            </p:column>   
+            </p:column> 
+            
+            <p:column headerText="#{bundle.Type}" sortBy="#{item.typeName}">
+                <h:outputLabel value="#{item.typeName}"/>
+            </p:column> 
 
             <p:column headerText="#{bundle.Year}" sortBy="#{item.year}">
                 <h:outputLabel value="#{item.year}" />                                    
@@ -52,8 +56,7 @@
             <p:column>
                 <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" 
                                  update="itemsTbl"
-                                 actionListener="#{countersExplBean.onDeleteItem(item)}">
-                    <p:confirm header="#{bundle.Delete}" message="#{bundle.ConfirmDelete}" icon="ui-icon-alert" />
+                                 actionListener="#{countersExplBean.onDeleteItem(item)}">                    
                 </p:commandButton>
             </p:column>
         </p:dataTable> 
