--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -65,12 +65,13 @@
                 
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-5 col-padding, ui-grid-col-7 col-padding" styleClass="without-spaces ui-grid-col-12">
                     <h:panelGrid columns="1" styleClass="without-spaces ui-grid-col-12">
-                        <p:outputLabel value="#{bundle.Number}:" />  
+                        <p:outputLabel value="#{bundle.Number}:" indicateRequired="true"/>  
                         <h:panelGroup id="regNumberPanel" styleClass="ui-grid-col-12 without-spaces">
                             <div class="ui-inputgroup">
                                 <p:inputText value="#{_item.regNumber}" id="number"
                                             title="#{bundle.RegistredDocNumber}"
                                             onkeypress="checkEsc();"
+                                            required="#{param['isRequired'] == 'true'}"
                                             rendered="#{_item.docType == null or _item.docType.numerator == null}"
                                             disabled="#{_bean.isReadOnly()}"
                                             onchange="return itemChange = 1;"
